<resources>
    <string name="app_name">Women Safety</string>
    <string name="enter_email_id">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome_message">Welcome to Women Safety</string>
    <string name="set_password">Set a password</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="settings">Settings</string>
    <string name="controls">Controls</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="example">Example</string>
    <string name="example_email">Example@gmail.com</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="view">View</string>
    <string name="app_icon">app icon</string>
    <string name="view_contacts">View Contacts</string>
    <string name="tips">Tips to escape\n from threat</string>
    <string name="tips2">Tips for women\n safety</string>
    <string name="videos">Videos for self\n defense</string>
    <string name="laws">Laws related to \nwomen safety</string>
    <string name="user_profile">User Profile</string>
    <string name="text_escape_threat">According to the International Research Centre for Women, almost 47 percent of girls are married before the age of 18. Currently, India ranks 13 in the world when it comes to child marriages. Since child marriage has been steeped into the Indian culture and tradition since centuries, it has been tough eliminating it. Read more at: https://yourstory.com/2016/06/laws-that-protect-women-rights?utm_pageloadtype=scroll</string>
    <string name="tips_for_women_safety">Tips For Women Safety</string>
    <string name="laws_related_to_women_safety">Laws Related to Women Safety</string>
    <string name="success">Successfully saved</string>
    <string name="reg_success">Registration success</string>
    <string name="reg_fail">Registration failed</string>
    <string name="login_fail">Login failed</string>
    <string name="please_enter_email_id">Please enter Email ID</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="please_enter_a_valid_email_id">Please enter a valid email id</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="user_email_id">Email ID</string>
    <string name="helpline_numbers">Helpline numbers</string>
    <string name="contacts_db">contacts</string>
    <string name="name_column">name</string>
    <string name="full_name_column">fullName</string>
    <string name="hi_user">Hi, </string>
    <string name="user_phone_number">phoneNumber</string>
    <string name="contact_number">contactNumber</string>
    <string name="number_exists">Number already exists!</string>
    <string name="no_empty">This field cannot be empty</string>
    <string name="Shake_device_to_send_location">Shake device to send location</string>
    <string name="message_sent">Message sent</string>
    <string name="message_failed">Please try again later</string>
    <string name="permission_needed">Permission needed</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_already_granted">You have already granted the permission</string>
    <string name="enable_gps">Please enable GPS</string>
    <string name="location">https://www.google.com/maps/search/?api=1&amp;query=</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="broadcast_action">com.yml.womensafety.ACTION</string>
    <string name="broadcast_name">com.yml.womensafety.EXTRA_TEXT</string>
    <string name="alert_dialog_title">Alert!</string>
    <string name="ss_skip">Skip</string>
    <string name="ss_emergency">Emergency</string>
    <string name="ss_contacts">Contacts</string>
    <string name="ss_description_1">Add emergency contacts to send a quick SMS when in need of help!</string>
    <string name="ss_send">Send</string>
    <string name="ss_location">Location</string>
    <string name="ss_description_2">Send SMS containing location to emergency contacts on shaking the device.</string>
    <string name="ss_helpful">Helpful</string>
    <string name="ss_tips">Tips</string>
    <string name="ss_description_3">Some tips regarding women safety and helpline numbers in case of emergency.</string>
    <string name="ss_get_started_text">Get Started</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_here">Not a user? Click here to register</string>
    <string name="alert_send">Send</string>
    <string name="email_sent">Email sent.</string>
    <string name="alert_check_mail">Please check your mail.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="register">Register</string>
    <string name="go_to_login">Already a user? Click here login.</string>
    <string name="situation_1">What should a woman do if she finds herself alone in the company of a strange male as she prepares to enter a lift in a high rise apartment late at night?</string>
    <string name="situation_1_solution">Enter the lift, if you need to reach a high floor (say 10th floor), press all the buttons up to your destination
    No one will dare attack in a lift that stops on every floor.</string>
    <string name="situation_2">What should you do if a stranger tries to attack you when you are alone in the house?</string>
    <string name="situation_2_solution">Run to the kitchen, you alone know where the chilly powder and turmeric powder are kept. You also know where the knives and plates are kept. If nothing else,  start throwing plates and utensils all over. Let them break. Scream… Remember that noise is the greatest enemy of the molester. He does not want to get caught.</string>
    <string name="situation_3">What to do if the driver of auto or taxi turns into a street he is not supposed to and you feel you are entering a danger zone?</string>
    <string name="situation_3_solution">Use the handle of your purse or stole to wrap around his neck and pull him back. Within seconds he will feel choked or helpless. In case you don\'t have a purse or a stole, just pull him back by his collar. The top button of his shirt will do the same trick.</string>
    <string name="situation_4">What should you do when taking an auto or a taxi at night?</string>
    <string name="situation_4_solution">Before getting into an auto at night, note down it\'s registration number and pass on the details to your family member or friends on a call in a language that the driver understands. Even if no one picks up your call, pretend you are in a conversation. The driver now knows someone has his details and he will be in serious trouble if something goes wrong. He is now bound to take you home safe and sound.</string>
    <string name="situation_5">What should you do if you are stalked at night?</string>
    <string name="situation_5_solution">Enter a shop or a house and explain your situation. If it is night and shops are not open, go inside an ATM center. ATM centers always have close circuit television. Fearing identification, no one will attack you.</string>
    <string name="situation_6">What should you do if you are getting mugged?</string>
    <string name="situation_6_solution">Give in to their demands. Obviously, your life is more important than your wallet and jewellery. Don’t try to argue or reason with your muggers. And no matter what you do, don’t threaten them. This will anger them and they may shoot you and even your near and dear ones. And inform the police when you are sure than you are out of danger.</string>
    <string name="safety_tip_title_1">Be aware of your surroundings</string>
    <string name="safety_tip_title_2">Hold your cell phone</string>
    <string name="safety_tip_title_3">Be alert!</string>
    <string name="safety_tip_title_4">Be careful while responding</string>
    <string name="safety_tip_title_5">Look out for predators!</string>
    <string name="safety_tip_title_6">Be careful while giving your home address</string>
    <string name="safety_tip_title_7">When checking into a hotel..</string>
    <string name="safety_tip_title_8">Don\'t become an easy target</string>
    <string name="safety_tip_title_9">Don\'t respond immediately</string>
    <string name="safety_tip_title_10">Ask to point out the directions</string>
    <string name="safety_tip_title_11">What to do when someone grabs you?</string>
    <string name="safety_tip_title_12">Be aware of what you drink!</string>
    <string name="safety_tip_title_13">Avoid social media while walking</string>
    <string name="safety_tip_title_14">Be aware of your surroundings</string>
    <string name="safety_tip_1">If walking by yourself, get off your cell phone.Chatting can distract you, it\'s better to be aware of your surroundings.</string>
    <string name="safety_tip_2">If walking by yourself, hold your cell phone and be ready to make an emergency call.</string>
    <string name="safety_tip_3">Look underneath your car before approaching it in a parking garage or lot at night.</string>
    <string name="safety_tip_4">If you return to your car and see that a van is parked right next to the driver\'s side, enter through the passenger side. Predators often use vans and will disguise it as a family car.</string>
    <string name="safety_tip_5"> You return to your car and it has a flat tire. Back away. Return to wherever you came from (restaurant, store, etc) and call for help. Once assistance arrives, approach your car.
    If someone comes up to you (even if they are a woman) and wants to offer help, politely say, "No thank you." If a man, he could be a predator. If a woman, she could be the lurer.</string>
    <string name="safety_tip_6">When the pharmacist asks you to confirm your home address, whisper it to them. Broadcasting your home address among strangers on the line could compromise your safety.</string>
    <string name="safety_tip_7">If you\'re checking in to a hotel room, if the person at the front desk says your room number out loud, ask them to give you a new room and write the number on a piece of paper. Or when you check-in, ask upfront that they not say your room number out loud.</string>
    <string name="safety_tip_8">When traveling, do not walk with your map in your hand. It is a dead giveaway that you are a tourist. Therefore, you are an easy target.</string>
    <string name="safety_tip_9">If you call for room service, and you get a knock on your door, do not immediately open. Ask: "Who is it?" Make the person on the other side of the door tell you who they are before you open it.</string>
    <string name="safety_tip_10">When asking for directions and someone offers to show you the way by having you follow them, do not go. Just ask for them to point you in the right direction. Often, predators just want to get you to a place less crowded where your screams can\'t be heard.</string>
    <string name="safety_tip_11">If someone tries to grab you, twist your arm up and down and yell, "Stop!" Do anything you can to draw attention to yourself.</string>
    <string name="safety_tip_12">Always pour your own drink at a party and bring it with you everywhere… even to the bathroom. This will make it a lot harder for someone to drug you via you drink.</string>
    <string name="safety_tip_13">If someone is chasing after you, run away in a zig zag pattern. This will exhaust your attacker.</string>
</resources>