<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeBtn"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />
        <item
            android:id="@+id/contacts"
            android:icon="@drawable/ic_action_contacts"
            android:title="@string/add_contacts" />
        <item
            android:id="@+id/menuViewContacts"
            android:title="@string/view_contacts"/>

    </group>
    <item android:title="@string/controls">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_action_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>