<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink">

    <ImageView
        android:id="@+id/imageTips"
        android:layout_width="@dimen/ss_image_height_width"
        android:layout_height="@dimen/ss_image_height_width"
        android:src="@drawable/helpful_tips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ss_text_view_margin_top"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/ss_title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageTips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/imageTips"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/btnSkip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ss_get_started_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toEndOf="@+id/tabImage"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/ss_helpful"
        android:textColor="@color/white"
        android:textSize="@dimen/ss_text_view_2_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/imageTips"
        app:layout_constraintTop_toBottomOf="@id/imageTips"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/ss_tips"
        android:textColor="@color/white"
        android:textSize="@dimen/ss_text_view_3_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/ss_text_description_width_height"
        android:layout_height="@dimen/ss_text_description_width_height"
        android:layout_marginTop="@dimen/ss_text_view_4_margin_top"
        android:text="@string/ss_description_3"
        android:textColor="@color/white"
        android:textSize="@dimen/ss_title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".5" />

    <ImageView
        android:id="@+id/tabImage"
        android:layout_width="@dimen/ss_tab_width"
        android:layout_height="@dimen/ss_tab_height"
        android:layout_marginStart="@dimen/ss_tab_margin_start"
        android:src="@drawable/tab3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias=".6" />

</androidx.constraintlayout.widget.ConstraintLayout>