<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <ImageView
        android:id="@+id/imageLocation"
        android:layout_width="@dimen/ss_image_height_width"
        android:layout_height="@dimen/ss_image_height_width"
        android:src="@drawable/phone_destination"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3" />

    <TextView
        android:id="@+id/tvTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ss_text_view_margin_top"
        android:text="@string/app_name"
        android:textColor="@color/pink"
        android:textSize="@dimen/ss_title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/imageLocation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/btnSkipTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ss_skip_text_margin_end"
        android:text="@string/ss_skip"
        android:textColor="@color/pink"
        android:textSize="@dimen/ss_title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/tvTitleLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTitleLabel" />

    <TextView
        android:id="@+id/tvTitleTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/ss_send"
        android:textColor="@color/pink"
        android:textSize="@dimen/ss_text_view_2_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/imageLocation"
        app:layout_constraintTop_toBottomOf="@id/imageLocation"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tvTitleThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/ss_location"
        android:textColor="@color/pink"
        android:textSize="@dimen/ss_text_view_3_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/tvTitleTwo"
        app:layout_constraintTop_toBottomOf="@id/tvTitleTwo"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="@dimen/ss_text_description_width_height"
        android:layout_height="@dimen/ss_text_description_width_height"
        android:layout_marginTop="@dimen/ss_text_view_4_margin_top"
        android:text="@string/ss_description_2"
        android:textColor="@color/pink"
        android:textSize="@dimen/ss_title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/tvTitleThree"
        app:layout_constraintTop_toBottomOf="@id/tvTitleThree"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".5" />

    <ImageView
        android:layout_width="@dimen/ss_tab_width"
        android:layout_height="@dimen/ss_tab_height"
        android:layout_marginStart="@dimen/ss_tab_margin_start"
        android:src="@drawable/tab2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/tvDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintVertical_bias=".6" />

</androidx.constraintlayout.widget.ConstraintLayout>