<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_adjustable_height_width"
        android:scaleType="centerCrop"
        android:src="@drawable/login_ui_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_adjustable_height_width"
        android:background="@drawable/constraint_view_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_adjustable_height_width"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginTextField1"
                android:layout_width="@dimen/login_adjustable_height_width"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:paddingStart="@dimen/login_padding_start_end"
                android:paddingTop="@dimen/login_padding_top_bottom"
                android:paddingEnd="@dimen/login_padding_start_end"
                android:paddingBottom="@dimen/login_padding_top_bottom"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".2"
                app:layout_constraintWidth_percent=".8">

                <EditText
                    android:id="@+id/loginEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="abc@gmail.com"
                    android:background="@color/white"
                    android:hint="@string/enter_email_id"
                    android:inputType="textEmailAddress"
                    app:endIconMode="clear_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginTextField2"
                android:layout_width="@dimen/login_adjustable_height_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_margin_top_end"
                android:background="@drawable/edit_text_bg"
                android:paddingStart="@dimen/login_padding_start_end"
                android:paddingTop="@dimen/login_padding_top_bottom"
                android:paddingEnd="@dimen/login_padding_start_end"
                android:paddingBottom="@dimen/login_padding_top_bottom"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTextField1"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent=".8">

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="abc@gmail.com"
                    android:background="@color/white"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".8" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/Animation.Design.BottomSheetDialog"
                android:layout_width="@dimen/login_adjustable_height_width"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/login_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".8"
                app:layout_constraintWidth_percent=".8" />

            <TextView
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_margin_top_end"
                android:layout_marginEnd="@dimen/login_margin_top_end"
                android:text="@string/forgot_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/loginTextField2"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTextField2"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/registerHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register_here"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                app:layout_constraintVertical_bias=".9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/constraint_view_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_height_width"
        android:layout_height="@dimen/logo_height_width"
        android:src="@drawable/ic_woman"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textColor="@color/white"
        android:textSize="@dimen/login_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias=".2" />

</androidx.constraintlayout.widget.ConstraintLayout>